--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9363,6 +9363,7 @@ img.lazy-image.loaded {
 	right: 30px;
 	animation: fadeIn 700ms ease-in-out 1s both;
 	cursor: pointer;
+	z-index: 100;
 }
 
 .backtotop .icon {
@@ -9370,8 +9371,10 @@ img.lazy-image.loaded {
 	width: 45px;
 	text-align: center;
 	line-height: 45px;
-	background-image: linear-gradient(90deg, rgba(209, 100, 26, 1) 0%, rgba(192, 40, 42, 1) 100%);
+	background-image: linear-gradient(90deg, rgb(34, 190, 3) 0%, rgb(39, 188, 9) 100%);
+	;
 	color: #fff;
+	z-index: 100;
 	border-radius: 50%;
 }
 
