--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6391,7 +6391,7 @@ img.lazy-image.loaded {
 	color: #ffffff;
 	text-align: center;
 	padding: 270px 0px 110px;
-	background-color: #25283a;
+	/* background-color: #25283a; */
 	z-index: 2;
 }
 
@@ -6413,7 +6413,7 @@ img.lazy-image.loaded {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: #001c2a;
+	/* background: #001c2a; */
 	opacity: 0.80;
 }
 
